12-11-2024 Update