@@ -7,6 +7,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 public class PrimeNumbersStream {
 //Задание 2. Имеется набор целых чисел: 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20. Требуется из этого списка отобрать только простые числа. Используйте методы stream()
@@ -14,18 +16,16 @@ public class PrimeNumbersStream {
 
         List <Integer> num = Arrays.asList(1, 12, 13, 14, 15, 16, 17, 18, 19, 20);
 
-        List<Integer> res = num.stream().filter(PrimeNumbersStream::isPrimeNumber).collect(Collectors.toList());
+        List<Integer> res = num.stream().filter(PrimeNumbersStream::isPrimeNumber).toList();
+        //Stream<Integer> res = Stream.of(10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20).filter(n -> isPrimeNumber(n));
         System.out.println(res);
     }//end main
 
     public static boolean isPrimeNumber(Integer number){
-        int div = 2;
-        while (div < number ){
-            if(number % div == 0){
-                return false;
-            }//end if
-            div++;
-        }//end while div
-        return true;
+        if(number <= 1 ){
+            return false;
+        }
+        return IntStream.range(2,number)
+                .noneMatch(div -> number % div == 0);
     }//end isPrimeNumber
 }//end class
